Make both iPhone images the same size & add a width limit to phone name and price to prevent different padding shifts

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ h2 {
 
 .phone-name {
     text-align: left;
+    width: 200px;
 }
 
 .subheading {
@@ -112,6 +113,10 @@ h2 {
     margin-top: 100px;
     float: right;
     padding-right: 300px;
+}
+
+.phone-info p {
+    width: 500px;
 }
 
 .colour-selection {
